syntax = "proto3";

import "google/protobuf/wrappers.proto";

option java_package = "io.anemos.metastore.v1alpha1";
option java_multiple_files = true;

package grpc.registry.v1alpha1;

message Patch {
    map<string, FilePatch> file_patches = 1;
    map<string, MessagePatch> message_patches = 2;
    map<string, EnumPatch> enum_patches = 3;
    map<string, ServicePatch> service_patches = 4;
}

enum ChangeType {
    UNCHANGED = 0;
    CHANGED = 1;
    ADDITION = 2;
    REMOVAL = 3;
    RESERVED = 4;
    UNRESERVED = 5;
    DEPRECATED = 6;
    REINSTATED = 7;
    PAYLOAD_CHANGED = 8;
}

message Rule {
    enum RuleType {
        RULE_TYPE_UNKNOWN = 0;
        RULE_TYPE_LINT = 1;
        RULE_TYPE_CUSTOM = 15;
    }
    string rule_name = 1;
    RuleType rule_type = 2;
}

// Generic Change message meant for top level objects like File, Message,
// Enum and Service. As the don't contain any time information and are
// actually containers they only support addition, renames and removals.
message Change {
    ChangeType change_type = 1;

    string from_name = 2;
    string to_name = 3;
}

message ImportChange {
    ChangeType change_type = 1;

    string name = 2;
}

message EnumValueChange {
    ChangeType change_type = 1;

    string from_name = 2;
    bool from_deprecated = 4;
    bool from_reserved = 5;

    string to_name = 6;
    bool to_deprecated = 8;
    bool to_reserved = 9;
}

message MethodChange {
    ChangeType change_type = 1;

    string from_name = 2;
    bool from_deprecated = 4;

    string to_name = 6;
    bool to_deprecated = 8;
}
message OptionChange {
    enum OptionType {
        OPTION_TYPE_UNSET = 0;
        FILE_OPTION = 1;
        MESSAGE_OPTION = 2;
        FIELD_OPTION = 3;
        ENUM_OPTION = 4;
        ENUM_VALUE_OPTION = 5;
        SERVICE_OPTION = 6;
        METHOD_OPTION = 7;
    }

    ChangeType change_type = 1;
    OptionType type = 2;

    bytes payload_old = 5;
    bytes payload_new = 6;

    int32 option_number = 7;
    string option_name = 8;
}

message FieldChange {
    enum FieldType {
        FIELD_TYPE_UNSET = 0;
        FIELD_TYPE_DOUBLE = 1;
        FIELD_TYPE_FLOAT = 2;
        FIELD_TYPE_INT64 = 3;
        FIELD_TYPE_UINT64 = 4;
        FIELD_TYPE_INT32 = 5;
        FIELD_TYPE_FIXED64 = 6;
        FIELD_TYPE_FIXED32 = 7;
        FIELD_TYPE_BOOL = 8;
        FIELD_TYPE_STRING = 9;
        FIELD_TYPE_MESSAGE = 11;
        FIELD_TYPE_BYTES = 12;
        FIELD_TYPE_UINT32 = 13;
        FIELD_TYPE_ENUM = 14;
        FIELD_TYPE_SFIXED32 = 15;
        FIELD_TYPE_SFIXED64 = 16;
        FIELD_TYPE_SINT32 = 17;
        FIELD_TYPE_SINT64 = 18;
    };

    ChangeType change_type = 1;

    string from_name = 2;
    FieldType from_type = 3;
    bool from_deprecated = 4;
    bool from_reserved = 5;
    string from_type_name = 10;

    string to_name = 6;
    FieldType to_type = 7;
    bool to_deprecated = 8;
    bool to_reserved = 9;
    string to_type_name = 11;
}

message FilePatch {
    string file_name = 1;
    repeated string message_patch_ref = 2;

    repeated Rule rule = 3;

    Change change = 4;

    repeated ImportChange import_change = 9;
    repeated OptionChange option_change = 10;
}

message MessagePatch {
    string package = 1;
    string name = 2;

    repeated Rule rule = 3;

    Change name_change = 4;


    repeated FieldPatch field_patches = 5;

    repeated OptionChange option_change = 10;
}

message FieldPatch {
    int32 number = 1;
    string name = 2;

    repeated Rule rule = 3;

    FieldChange change = 4;

    repeated OptionChange option_change = 10;
}

message ServicePatch {
    string package = 1;
    string name = 2;

    repeated Rule rule = 3;

    Change name_change = 4;

    repeated MethodPatch method_patches = 5;
}

message MethodPatch {
    string name = 2;

    repeated Rule rule = 3;

    MethodChange method_change = 4;
}

message EnumPatch {
    string package = 1;
    string name = 2;

    repeated Rule rule = 3;

    Change name_change = 4;

    repeated EnumValuePatch value_patches = 5;
}

message EnumValuePatch {
    int32 number = 1;
    string name = 2;

    repeated Rule rule = 3;

    EnumValueChange value_change = 4;
}
