syntax = "proto3";

option java_package = "io.anemos.metastore.v1alpha1";

package anemos.metastore.v1alpha1;

service MetaStoreService {
    rpc GetAvroSchema (GetAvroSchemaRequest) returns (GetAvroSchemaResponse);
}

message GetAvroSchemaRequest {
    string registry_name = 1;
    string branch_name = 2;
    string package_name = 3;
    string message_name = 4;
    string version = 5;
}

message GetAvroSchemaResponse {
    string schema = 1;
}
